// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JiraSearchDialog /> matches snapshot 1`] = `
<Fragment>
  <Component>
    <WithAnalyticsEvents(WrappedComponent)
      isExpanded={true}
    />
    <Component>
      <SearchResults
        isBelowTakeoverWidth={false}
        isPreQuery={true}
        onNavigate={[Function]}
        query=""
        results={
          Object {
            "boardsProjectsFiltersPlans": Object {
              "isLoading": true,
              "results": null,
            },
            "issues": Object {
              "isLoading": true,
              "results": null,
            },
          }
        }
      />
    </Component>
  </Component>
  <SearchFooter>
    <WithAnalyticsEvents(WrappedComponent)
      isLoading={true}
      onClick={[Function]}
      query=""
    />
  </SearchFooter>
</Fragment>
`;

exports[`<JiraSearchDialog /> matches snapshot and does not render error when there are no results when searching 1`] = `
<Fragment>
  <Component>
    <WithAnalyticsEvents(WrappedComponent)
      isExpanded={true}
    />
    <Component>
      <SearchResults
        isBelowTakeoverWidth={false}
        isPreQuery={false}
        onNavigate={[Function]}
        query="some query"
        results={
          Object {
            "boardsProjectsFiltersPlans": Object {
              "isLoading": false,
              "results": Object {
                "items": Array [],
                "timings": 0,
                "totalSize": 0,
              },
            },
            "issues": Object {
              "isLoading": false,
              "results": Object {
                "items": Array [],
                "timings": 0,
                "totalSize": 0,
              },
            },
          }
        }
      />
    </Component>
    <Component>
      <JiraFilterPane
        isLoading={false}
        query="some query"
      />
    </Component>
  </Component>
  <SearchFooter>
    <WithAnalyticsEvents(WrappedComponent)
      isLoading={false}
      onClick={[Function]}
      query="some query"
    />
  </SearchFooter>
</Fragment>
`;

exports[`<JiraSearchDialog /> matches snapshot and renders error when there is an error when searching 1`] = `
<Fragment>
  <Component>
    <WithAnalyticsEvents(WrappedComponent)
      isExpanded={true}
    />
    <Component>
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <InjectIntl(SearchError)
          onRetry={[Function]}
        />
      </div>
    </Component>
    <Component>
      <JiraFilterPane
        isLoading={false}
        query="some query"
      />
    </Component>
  </Component>
  <SearchFooter>
    <WithAnalyticsEvents(WrappedComponent)
      isLoading={false}
      onClick={[Function]}
      query="some query"
    />
  </SearchFooter>
</Fragment>
`;

exports[`<JiraSearchDialog /> should render pre query empty state when error in the pre query (and therefore no results) 1`] = `
<Fragment>
  <InjectIntl(NoPreQueryResults) />
  <SearchFooter>
    <WithAnalyticsEvents(WrappedComponent)
      isLoading={false}
      onClick={[Function]}
      query=""
    />
  </SearchFooter>
</Fragment>
`;

exports[`<JiraSearchDialog /> should render pre query empty state when no pre query results 1`] = `
<Fragment>
  <InjectIntl(NoPreQueryResults) />
  <SearchFooter>
    <WithAnalyticsEvents(WrappedComponent)
      isLoading={false}
      onClick={[Function]}
      query=""
    />
  </SearchFooter>
</Fragment>
`;
